# fairway

./: .cursorrules  .dockerignore  .gitignore  .rules.md  404.html  Apptainer.def  BASELINE.txt  Dockerfile  Dockerfile.dev  HANDOFF.md  ISSUES.md  Makefile  PLAN.md  README.md  Singularity.def  coverage.json  coverage.xml  duckdb_sharding_strategy.md.resolved  entrypoint.sh  fairway-dev.def  futurework.md  governance.yaml  index.html  main.nf  mkdocs.yml  nextflow.config  notes.md  orchestrator_decision.md  plan.md  plan_nextflow.md  plan_phase1.md  plan_phase2.md  pyproject.toml  requirements.txt  rules.md  test_yaml.nf
.agent-sync/: state.json
.claude/commands/: commit.md
.github/workflows/: ci.yml  docs.yml  release.yml
.reports/: codemap-diff.txt  dead-code-analysis.md
architecture/: index.html
codemaps/: architecture.md  backend.md  data.md
config/: discovery_test.yaml  example_config.yaml  sales_partitioned_schema.yaml  sales_schema.yaml
configuration/: index.html
data_inventory/: index.html
design_docs/iceberg_support/: index.html
docs/: CONTRIB.md  RUNBOOK.md  architecture.md  chunk_c_plan.md  cli.md  comprehensive_code_review.md  configuration.md  coverage.md  data_inventory.md  engines.md  enrichments.md  fixed_width.md  getting-started.md  index.md  ingestion_options.md  manifest.md  release.md  schema_evolution.md  supported_formats.md  transformations.md  validations.md
docs/architecture/: 001_parallel_ingestion.md
docs/design_docs/: engine_abstraction_refactor.md  flexible_ingestion_rfc.md  iceberg_support.md  schema_inference_scalability.md
docs/reviews/: fixed_width_review.md
engines/: index.html
enrichments/: index.html
examples/: custom_cleaner.py
getting-started/: index.html
scripts/: fairway-hpc.sh  preprocess_ipums.py  setup_discovery_test.py  update_cli.py
search/: search_index.json
src/: cli.py  generate_test_data.py  manifest.py  pipeline.py
src/enrichments/: geospatial.py
src/exporters/: redivis_exporter.py
src/fairway/: __init__.py  __main__.py  _init_templates.py  _sbatch.py  apptainer.py  batch_processor.py  batcher.py  cli.py  config.py  config_loader.py  constants.py  ctx.py  defaults.py  discover.py  duckdb_runner.py  fixed_width.py  generate_test_data.py  hpc.py  logging_config.py  manifest.py  paths.py  pipeline.py  schema.py  schema_pipeline.py  summarize.py  templates.py  transform_loader.py  validations.py
src/transformations/: base.py
test_project/: README.md
test_project/config/: fairway.yaml
test_verification_v3/: README.md  Singularity.def  main.nf  nextflow.config
test_verification_v3/config/: fairway.yaml
test_verification_v3/docs/: getting-started.md
test_verification_v4/: README.md
test_verification_v4/config/: fairway.yaml
test_verification_v4/docs/: getting-started.md
tests/: conftest.py  fairway_test_flexible.yaml  helpers.py  test_apptainer.py  test_archive_cache_paths.py  test_atomic_swap.py  test_batch_integration.py  test_batch_processor.py  test_batcher.py  test_cli.py  test_cli_account_default.py  test_cli_batch.py  test_cli_build.py  test_cli_coverage.py  test_cli_discover_config.py  test_cli_job_management.py  test_cli_manifest.py  test_cli_spark_lifecycle.py  test_cli_structure.py  test_config.py  test_config_comprehensive.py  test_config_loader_coverage.py  test_config_orchestration.py  test_config_path_resolution.py  test_config_validation.py  test_coverage_gaps.py  test_cross_stack_validation.py  test_defaults.py  test_discover.py  test_duckdb_engine.py  test_duckdb_runner.py  test_e2e_pipeline.py  test_fixed_width.py  test_flexible_ingestion.py  test_imports_isolation.py  test_ingestion_formats.py  test_init_templates.py  test_logging_config.py  test_manifest.py  test_manifest_corruption.py  (+50 more)
tests/data/: processed_raw_headerless.csv  scalability_output
tests/fixtures/: README.md  generate.py
tests/integration/: conftest.py  test_cli_to_output.py  test_config_to_pipeline.py  test_cross_stack.py  test_full_pipeline_duckdb.py  test_full_pipeline_pyspark.py  (+1 more)
transformations/: index.html
validations/: index.html
(+100 files in other folders)
