[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairway"
version = "0.1.0"
authors = [
  { name="Antigravity", email="antigravity@google.com" },
]
description = "A portable data ingestion framework for centralized research data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
    "fsspec",
    "mkdocs-material",
    "pandas",
]

[project.optional-dependencies]
spark = [
    "pyspark",
    "numpy",
    "pyarrow",
]
duckdb = [
    "duckdb",
    "numpy",
    "pyarrow",
]
redivis = [
    "redivis",
    "numpy",
    "pyarrow",
]
test-data-gen = [
    "numpy",
]
all = [
    "pyspark",
    "duckdb",
    "redivis",
    "numpy",
    "pyarrow",
]

[project.scripts]
fairway = "fairway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fairway = ["data/*"]
