[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairway"
version = "0.1.0"
authors = [
  { name="Antigravity", email="antigravity@google.com" },
]
description = "A portable data ingestion framework for centralized research data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
    "fsspec",
    "mkdocs-material",
    "pandas",
    "tabulate",
]

[project.optional-dependencies]
spark = [
    "pyspark>=4.1.1",
    "pandas",
    "numpy",
    "pyarrow",
]
duckdb = [
    "duckdb",
    "numpy",
    "pyarrow",
]
redivis = [
    "redivis",
    "numpy",
    "pyarrow",
]
test-data-gen = [
    "numpy",
]
all = [
    "pyspark>=4.1.1",
    "duckdb",
    "redivis",
    "numpy",
    "pyarrow",
]

[project.scripts]
fairway = "fairway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fairway = ["data/*"]
"fairway.data" = ["*"]
